# Yandex-Music-Downloader

./: Cargo.toml  LICENSE  README.md  config.toml  main.rs
extract_token/: Cargo.toml
extract_token/src/: main.rs  structs.rs
src/: main.rs  structs.rs  utils.rs
src/api/: client.rs  mod.rs  structs.rs
