[package]
name = "yandex_music_downloader"
version = "0.1.7"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
base64 = "0.22.1"
hmac = "0.12.1"
crypto-common = "0.1.6"
regex = "1.11.0"
clap = { version = "4.5.18", features = ["derive"] }
toml = "0.8.19"
indicatif = "0.17.8"
metaflac = "0.2.7"
id3 = "1.14.0"
mp4ameta = "0.11.0"

[profile.release]
strip = true